--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,14 @@
 {
-  "development": {
+  
+
+    "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
+    "password": "password",
+    "database": "school_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
-  },
+    },
+
   "test": {
     "username": "root",
     "password": null,
